@@ -36,7 +36,35 @@
       <item name="Apache Incubator" href="http://incubator.apache.org/" />
       <item name="Giraph" href="http://incubator.apache.org/giraph/"/>
     </breadcrumbs>
+    
+    <menu name="Giraph">
+      <item name="About" href="http://incubator.apache.org/giraph/index.html"/>
+      <item name="Wiki" href="https://cwiki.apache.org/confluence/display/GIRAPH" />
+    </menu>
 
-    <menu ref="reports"/> 
+    <menu name="Project Information" inherit="top">
+      <item name="Summary" href="http://incubator.apache.org/giraph/project-summary.html" />
+      <item name="Team" href="http://incubator.apache.org/giraph/team-list.html" />
+      <item name="Mailing Lists" href="http://incubator.apache.org/giraph/mail-lists.html" />
+      <item name="License" href="http://www.apache.org/licenses/" />
+      <item name="Issue Tracking" href="http://incubator.apache.org/giraph/issue-tracking.html" />
+      <item name="Source Repository" href="http://incubator.apache.org/giraph/source-repository.html" />
+      <item name="Dependencies" href="http://incubator.apache.org/giraph/dependencies.html" />
+      <item name="Reports" href="http://incubator.apache.org/giraph/project-reports.html" collapse="true">
+        <item name="Surefire Report" href="http://incubator.apache.org/giraph/surefire-report.html" />
+        <item name="Checkstyle Results" href="http://incubator.apache.org/giraph/checkstyle.html" />
+        <item name="Jdepend" href="http://incubator.apache.org/giraph/jdepend-report.html" />
+        <item name="Cobertura Test Coverage" href="http://incubator.apache.org/giraph/cobertura/index.html" />
+        <item name="Tag List" href="http://incubator.apache.org/giraph/taglist.html" />
+        <item name="Source Xref" href="http://incubator.apache.org/giraph/xref/index.html" />
+        <item name="Test Source Xref" href="http://incubator.apache.org/giraph/xref-test/index.html" />
+      </item>
+    </menu>
+    
+    <menu name="Documentation">
+      <item name="Quick Start Guide" href="https://cwiki.apache.org/confluence/display/GIRAPH/Quick+Start+Guide"/>
+      <item name="Shortest Paths Example" href="https://cwiki.apache.org/confluence/display/GIRAPH/Shortest+Paths+Example"/>
+      <item name="Javadoc" href="apidocs/index.html"/>
+    </menu> 
   </body>
 </project>
